prueba hardcode scurityconfig